+gencerts script, +ci base config

--- a/stacks/traefik/metrics.yml
+++ b/stacks/traefik/metrics.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   reverse-proxy:
     image: traefik
-    command: --api --docker --docker.domain=localhost --docker.network=default_default --docker.watch --metrics --metrics.prometheus --metrics.prometheus.buckets="0.1,0.3,1.2,5.0"
+    command: --api --docker --docker.domain=${HOST:-localhost} --docker.network=${SERVICE_NAME:-default}_default --docker.watch --metrics --metrics.prometheus --metrics.prometheus.buckets="0.1,0.3,1.2,5.0"
     ports:
       - "80:80"
       - "8080:8080"
