--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ deploy:
     - ssh-add <(echo "$SSH_PRIVATE_KEY")
     - cd stacks/traefik
     - ssh deployer@$HOST "docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com"
-    - ssh deployer@$HOST "rm ~/docker-compose.yml"
+    - ssh deployer@$HOST "rm ~/docker-compose.yml" || true
     - cat metrics.yml | ssh deployer@$HOST "cat > ~/docker-compose.yml" || true
     - ssh deployer@$HOST "docker stack deploy -c ~/docker-compose.yml $SERVICE_NAME --with-regist" || true
   only:
