--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,6 @@ deploy:
     - ssh deployer@$HOST "docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com"
     - ssh deployer@$HOST "rm ~/docker-compose.yml" || true
     - cat metrics.yml | ssh deployer@$HOST "cat > ~/docker-compose.yml" || true
-    - ssh deployer@$HOST "docker stack deploy -c ~/docker-compose.yml $SERVICE_NAME --with-regist" || true
+    - ssh deployer@$HOST "docker stack deploy -c ~/docker-compose.yml $SERVICE_NAME --with-registry-auth" || true
   only:
     - master
