fix swarm deploy

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,24 +4,12 @@ services:
   - docker:dind
 
 stages:
-  - build
   - deploy-to-swarm
 
 variables:
   CONTAINER_IMAGE: registry.gitlab.com/$CI_PROJECT_PATH
   DOCKER_HOST: tcp://docker:2375
   DOCKER_DRIVER: overlay2
-
-build:
-  stage: build
-  script:
-    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
-    - docker pull $CONTAINER_IMAGE:latest || true
-    - docker build --cache-from $CONTAINER_IMAGE:latest --tag $CONTAINER_IMAGE:$CI_BUILD_REF --tag $CONTAINER_IMAGE:latest ./
-    - docker push $CONTAINER_IMAGE:$CI_BUILD_REF
-    - docker push $CONTAINER_IMAGE:latest
-  only:
-    - master
 
 deploy-to-swarm:
   stage: deploy-to-swarm
@@ -35,6 +23,8 @@ deploy-to-swarm:
     - echo "$TLSKEY" > $DOCKER_CERT_PATH/key.pem
     - cd stacks/traefik
     - docker -H=$HOST --tlsverify --tlscacert=$DOCKER_CERT_PATH/ca.pem --tlscert=$DOCKER_CERT_PATH/cert.pem --tlskey=$DOCKER_CERT_PATH/key.pem stack deploy --with-registry-auth -c metrics.yml $SERVICE_NAME
+    - cd ../metrics
+    - docker -H=$HOST --tlsverify --tlscacert=$DOCKER_CERT_PATH/ca.pem --tlscert=$DOCKER_CERT_PATH/cert.pem --tlskey=$DOCKER_CERT_PATH/key.pem stack deploy --with-registry-auth -c docker-compose.yml $SERVICE_NAME
     - rm -rf $DOCKER_CERT_PATH
   only:
     - master
