--- a/stacks/metrics/docker-compose.yml
+++ b/stacks/metrics/docker-compose.yml
@@ -65,6 +65,6 @@ services:
      - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
      - GF_USERS_ALLOW_SIGN_UP=false
    labels:
-     - "traefik.frontend.rule=Host:grafana.localhost"
+     - "traefik.frontend.rule=Host:grafana.sawa.space"
    ports:
      - 3000:3000
